cdk.out/CdkStack.template.json
{
 "Resources": {
  "vpcA2121C38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/Resource"
   }
  },
  "vpcPublicSubnet1Subnet2E65531E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": "ap-southeast-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet1/Subnet"
   }
  },
  "vpcPublicSubnet1RouteTable48A2DF9B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet1/RouteTable"
   }
  },
  "vpcPublicSubnet1RouteTableAssociation5D3F4579": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "vpcPublicSubnet1DefaultRoute10708846": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "vpcPublicSubnet1EIPDA49DCBE": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet1/EIP"
   }
  },
  "vpcPublicSubnet1NATGateway9C16659E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcPublicSubnet1EIPDA49DCBE",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet1/NATGateway"
   }
  },
  "vpcPublicSubnet2Subnet009B674F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": "ap-southeast-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet2/Subnet"
   }
  },
  "vpcPublicSubnet2RouteTableEB40D4CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet2/RouteTable"
   }
  },
  "vpcPublicSubnet2RouteTableAssociation21F81B59": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet2Subnet009B674F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "vpcPublicSubnet2DefaultRouteA1EC0F60": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "vpcPublicSubnet3Subnet11B92D7C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": "ap-southeast-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet3/Subnet"
   }
  },
  "vpcPublicSubnet3RouteTableA3C00665": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet3/RouteTable"
   }
  },
  "vpcPublicSubnet3RouteTableAssociationD102D1C4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet3RouteTableA3C00665"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet3Subnet11B92D7C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "vpcPublicSubnet3DefaultRoute3F356A11": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet3RouteTableA3C00665"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PublicSubnet3/DefaultRoute"
   }
  },
  "vpcPrivateSubnet1Subnet934893E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": "ap-southeast-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet1/Subnet"
   }
  },
  "vpcPrivateSubnet1RouteTableB41A48CC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet1/RouteTable"
   }
  },
  "vpcPrivateSubnet1RouteTableAssociation67945127": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet1Subnet934893E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "vpcPrivateSubnet1DefaultRoute1AA8E2E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet1NATGateway9C16659E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "vpcPrivateSubnet2Subnet7031C2BA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": "ap-southeast-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet2/Subnet"
   }
  },
  "vpcPrivateSubnet2RouteTable7280F23E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet2/RouteTable"
   }
  },
  "vpcPrivateSubnet2RouteTableAssociation007E94D3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "vpcPrivateSubnet2DefaultRouteB0E07F99": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet1NATGateway9C16659E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "vpcPrivateSubnet3Subnet985AC459": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": "ap-southeast-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet3/Subnet"
   }
  },
  "vpcPrivateSubnet3RouteTable24DA79A0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet3/RouteTable"
   }
  },
  "vpcPrivateSubnet3RouteTableAssociationC58B3C2C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet3RouteTable24DA79A0"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet3Subnet985AC459"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "vpcPrivateSubnet3DefaultRoute30C45F47": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet3RouteTable24DA79A0"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet1NATGateway9C16659E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "vpcIGWE57CBDCA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/IGW"
   }
  },
  "vpcVPCGW7984C166": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "InternetGatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/vpc/VPCGW"
   }
  },
  "alb8A8B13C2": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "albSecurityGroup49866104",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "vpcPublicSubnet1Subnet2E65531E"
     },
     {
      "Ref": "vpcPublicSubnet2Subnet009B674F"
     },
     {
      "Ref": "vpcPublicSubnet3Subnet11B92D7C"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet3DefaultRoute3F356A11"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkStack/alb/Resource"
   }
  },
  "albSecurityGroup49866104": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB CdkStackalbFF7D4019",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/alb/SecurityGroup/Resource"
   }
  },
  "albSecurityGrouptoCdkStackwebSGA64DB33E80ADA833A1": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "albSecurityGroup49866104",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "webSG9F367DE6",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/alb/SecurityGroup/to CdkStackwebSGA64DB33E:80"
   }
  },
  "albListener3EA0B2EF": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "albListenerdefaulttargetGroup79BAE92B"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "alb8A8B13C2"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/alb/Listener/Resource"
   }
  },
  "albListenerdefaulttargetGroup79BAE92B": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 30,
    "HealthCheckPath": "/",
    "HealthyThresholdCount": 5,
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "UnhealthyThresholdCount": 2,
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/alb/Listener/default-targetGroup/Resource"
   }
  },
  "albListenerstaticRule4F017351": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "FixedResponseConfig": {
       "ContentType": "text/html",
       "MessageBody": "<h1>Static ALB Response</h1>",
       "StatusCode": "200"
      },
      "Type": "fixed-response"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/static"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "albListener3EA0B2EF"
    },
    "Priority": 5
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/alb/Listener/--staticRule/Resource"
   }
  },
  "webSG9F367DE6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CdkStack/webSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow HTTP traffic form anywhere",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow SSH Access",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/webSG/Resource"
   }
  },
  "webSGfromCdkStackalbSecurityGroupFC256AB280898C3DFF": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "webSG9F367DE6",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "albSecurityGroup49866104",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/webSG/from CdkStackalbSecurityGroupFC256AB2:80"
   }
  },
  "asgInstanceRole8AC4201C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkStack/asg"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/asg/InstanceRole/Resource"
   }
  },
  "asgInstanceProfile4E44E320": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "asgInstanceRole8AC4201C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/asg/InstanceProfile"
   }
  },
  "asgLaunchConfig37FDE42B": {
   "Type": "AWS::AutoScaling::LaunchConfiguration",
   "Properties": {
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t2.micro",
    "IamInstanceProfile": {
     "Ref": "asgInstanceProfile4E44E320"
    },
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "webSG9F367DE6",
       "GroupId"
      ]
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash\nsudo su\nyum install -y httpd\nsystemctl start httpd\nsystemctl enable httpd\necho \"<h1>Hello World from $(hostname -f)</h1>\" > /var/www/html/index.html"
    }
   },
   "DependsOn": [
    "asgInstanceRole8AC4201C"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkStack/asg/LaunchConfig"
   }
  },
  "asgASG4D014670": {
   "Type": "AWS::AutoScaling::AutoScalingGroup",
   "Properties": {
    "MaxSize": "3",
    "MinSize": "2",
    "LaunchConfigurationName": {
     "Ref": "asgLaunchConfig37FDE42B"
    },
    "Tags": [
     {
      "Key": "Name",
      "PropagateAtLaunch": true,
      "Value": "CdkStack/asg"
     }
    ],
    "TargetGroupARNs": [
     {
      "Ref": "albListenerdefaulttargetGroup79BAE92B"
     }
    ],
    "VPCZoneIdentifier": [
     {
      "Ref": "vpcPrivateSubnet1Subnet934893E8"
     },
     {
      "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
     },
     {
      "Ref": "vpcPrivateSubnet3Subnet985AC459"
     }
    ]
   },
   "UpdatePolicy": {
    "AutoScalingScheduledAction": {
     "IgnoreUnmodifiedGroupSizeProperties": true
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/asg/ASG"
   }
  },
  "asgScalingPolicyrequestsperminute5D73703F": {
   "Type": "AWS::AutoScaling::ScalingPolicy",
   "Properties": {
    "AutoScalingGroupName": {
     "Ref": "asgASG4D014670"
    },
    "PolicyType": "TargetTrackingScaling",
    "TargetTrackingConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ALBRequestCountPerTarget",
      "ResourceLabel": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           1,
           {
            "Fn::Split": [
             "/",
             {
              "Ref": "albListener3EA0B2EF"
             }
            ]
           }
          ]
         },
         "/",
         {
          "Fn::Select": [
           2,
           {
            "Fn::Split": [
             "/",
             {
              "Ref": "albListener3EA0B2EF"
             }
            ]
           }
          ]
         },
         "/",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             "/",
             {
              "Ref": "albListener3EA0B2EF"
             }
            ]
           }
          ]
         },
         "/",
         {
          "Fn::GetAtt": [
           "albListenerdefaulttargetGroup79BAE92B",
           "TargetGroupFullName"
          ]
         }
        ]
       ]
      }
     },
     "TargetValue": 60
    }
   },
   "DependsOn": [
    "albListenerstaticRule4F017351",
    "albListenerdefaulttargetGroup79BAE92B",
    "albListener3EA0B2EF"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkStack/asg/ScalingPolicyrequests-per-minute/Resource"
   }
  },
  "asgScalingPolicycpuutilscaling06365506": {
   "Type": "AWS::AutoScaling::ScalingPolicy",
   "Properties": {
    "AutoScalingGroupName": {
     "Ref": "asgASG4D014670"
    },
    "PolicyType": "TargetTrackingScaling",
    "TargetTrackingConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ASGAverageCPUUtilization"
     },
     "TargetValue": 75
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/asg/ScalingPolicycpu-util-scaling/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31Sy27CMBD8Fu7GLVRtzxQhFAm1UYK4VhuzBENiR/YahKL8e50XSUXV0+7Mjtbjsef85Z3PJnC1U7E/TzOZ8DImEGfmqe8SxZyXu0Kw5UHtwiULXZJJEbtEIdXc0EXaEW4hyXDgB25hrRYSSGp1F9fNKgjr8gm0BsIr3Fho5MW3w+JAERrf94LWSYcW5L0ec1TEYhTOSLqtjXZF4+FfYpUatPaBDlTDVwwzsCRFpmGfQAZKSJVefBiLovAJNDfZ+NlHM0NTL/qFxzppCVWn6fvRfAsm9ffrbY7hH1si10Y8xhUDR9oKyLxL79GDuAX3rRtwShyXWh1k6sz9JR6k7elb47+A57pRqL2LJvpfRMUk5LyMdOuor4GyVIcQGn2Q3lzFIrTaGdFMQzCQI7VxfDkqXPt/OknFlN4jP9mny+yNz1758+RkpZwap0jmyKO2/gA/3nyLu [...]
   },
   "Metadata": {
    "aws:cdk:path": "CdkStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Outputs": {
  "albDNS": {
   "Value": {
    "Fn::GetAtt": [
     "alb8A8B13C2",
     "DNSName"
    ]
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
